--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
 }
 
     body {
-        background-image: url("imahe.png");
+        background-image: url("bg_landing.png");
         background-repeat: no-repeat;
         background-position: center;
         background-size: cover;
