--- a/dashboard.css
+++ b/dashboard.css
@@ -1,16 +1,18 @@
 :root {
   --primary: #F5B942;
-  /* --background: url("dashboard\ bg.gif"); */
+   --background: url("dashboard bg.gif"); 
   --text: #ffffff;
   --muted: #aaaaaa;
 }
 
 body {
+   background: var(--background) no-repeat center center fixed;
+  background-size: cover;
     margin: 0;
   min-height: 100vh;
   display: flex;
   flex-direction: column; /* vertical layout */
-  background: #070606;
+  /* background: #070606; */
     color: var(--text);
   
 }
@@ -65,6 +67,25 @@ nav a:hover {
 
   margin: 20px auto;   /* center horizontally + keep compact */
 }
+.assistant-float {
+  position: fixed;
+  bottom: 20px;
+  right: 20px;
+  width: 65px;
+  height: 65px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  cursor: grab;
+  z-index: 9999;
+  backdrop-filter: blur(6px);
+  border-radius: 30px;
+}
+
+.assistant-float:hover {
+  transform: scale(1.15);
+}
+
 
 .icon{
   font-size: 23px;
